<resources>
    <string name="app_name">santa manitto</string>

    <string name="dialog_confirm">확인</string>
    <string name="dialog_cancel">취소</string>

    <string name="button_next">다음</string>
    <string name="button_change">변경하기</string>

    <string name="pm">오후</string>
    <string name="am">오전</string>

    <string name="main_back_pressed">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>

    <string name="santaperiodpicker_period">%d일 후</string>
    <string name="entername_background_welcome">반가워, 이제부터\n산타 마니또에서 재미있게 놀자!</string>
    <string name="entername_title">이름 설정</string>
    <string name="entername_title_name">내 이름 (최대 10자)</string>
    <string name="entername_edittext_hint">마니또가 알 수 있도록 지어줘!</string>
    <string name="entername_button_text">이름 짓기 완료</string>

    <string name="condition_title">약관 동의</string>
    <string name="condition_all_agree">전체 동의</string>
    <string name="condition_1">(필수) 이용 약관 동의</string>
    <string name="condition_2">(필수) 개인정보 수집 및 이용 동의</string>
    <string name="condition_background_text">약관에 동의하면 친구들과\n산타 마니또를 할 수 있어!</string>

    <string name="main_make_room">방 만들기</string>
    <string name="main_join_room">방 입장하기</string>
    <string name="main_exit_room">방 나가기</string>
    <string name="main_make_room_description">새로운 산타 마니또\n시작하기</string>
    <string name="main_join_room_description">초대 코드 입력 후\n마니또 방 들어가기</string>
    <string name="main_my_manitto_history">나의 산타 마니또</string>
    <string name="main_no_manitto_notice">친구들과 산타 마니또를 시작해 볼까?</string>
    <string name="main_room_expired">기한 만료</string>

    <string name="joinedroom_exit_room">방 나가기</string>
    <string name="joinedroom_manitto_info">%s의 산타</string>
    <string name="joinedroom_daydiff">공개 %d일 전</string>
    <string name="joinedroom_state_done">결과 공개</string>
    <string name="joinedroom_state_matching">매칭 대기 중</string>
    <string name="joinedroom_santa_info_before_matching">나의 산타는 누구일까?</string>

    <string name="santaloading_data_not_available">데이터를 불러오지 못했습니다.</string>

    <string name="createroom_background_title">방 정보 설정</string>
    <string name="createroom_background_description">언제까지 마니또 게임하게 할 거야\n내 마니또를 봐 산타 기다리잖아</string>
    <string name="createroom_room_name">방이름 (최대 17자)</string>
    <string name="createroom_roomname_hint">재미있는 방 이름을 지어보자!</string>
    <string name="createroom_room_expiration">마니또 공개일</string>
    <string name="createroom_expiration_description" formatted="false">최소 %d일부터 최대 %d일까지 기간을 설정할 수 있어~</string>
    <string name="textview_createroom_expiration_time">마니또 공개 시간</string>
    <string name="createroom_preview_end">산타 마니또 결과가 공개될거야!</string>
    <string name="createroom_preview_start">%d일 후인</string>
    <string name="createroom_preview" formatted="false">%d/%02d/%02d %s %02d : %02d</string>
    <string name="createroom_expiration_time" formatted="false">%02d : %02d</string>
    <string name="createroom_dialog_expiration_time_setting">종료 시간 설정</string>
    <string name="createroom_modify_title">방 정보 수정</string>
    <string name="createroom_modify_done">수정 완료</string>
    <string name="createroom_btn_skip">미션없이 방 만들기</string>
    <string name="createroom_btn_next">미션 만들기</string>

    <string name="createmission_background_title">미션 만들기</string>
    <string name="createmission_background_description">어떤 미션이 괜찮을까\n천 번쯤 고민 중</string>
    <string name="createmission_done_bottom_button">미션 만들기 완료</string>
    <string name="createmission_skip_bottom_button">건너뛰기</string>
    <string name="createmission_mission_hint">산타 할아버지 여기 미션 하나 추가요!</string>
    <string name="createmission_dialog_skip_has_mission">아직 작성중인 미션이 있어!\n미션이 사라져도 괜찮아?</string>
    <string name="createmission_dialog_no_mission">미션없는 마니또 게임은\n친구들이 심심해할 수 있어!</string>

    <string name="createconfirm_background_title">방 정보 확인</string>
    <string name="createconfirm_background_description">초대 전 상태 점검\n방 정보 췍~!</string>
    <string name="createconfirm_expiration_suffix">에 결과 공개!</string>
    <string name="createconfirm_no_mission">이번에는 마니또만 매칭될거야!\n다음에는 재미있는 미션을 추가해줘!</string>
    <string name="createconfirm_create_room">방 만들기</string>
    <string name="createconfirm_done_dialog">초대 코드를 복사해서\n친구들에게 공유해 주자!</string>

    <string name="joinroom_background_title">방 입장하기</string>
    <string name="joinroom_title">초대코드 입력</string>
    <string name="joinroom_card_title">초대코드</string>
    <string name="joinroom_background_description">산타가 초대한 방으로\n마니또를 찾아 떠나볼까?</string>
    <string name="joinroom_participation_code_hint">코드를 입력하면 방에 들어갈 수 있어!</string>
    <string name="joinroom_alert_already_matched">이미 마니또 게임이 시작된 방이야!</string>
    <string name="joinroom_alert_already_joined">이미 참여중인 방이야!</string>
    <string name="joinroom_alert_wrong_invitation_code">참여가 불가능한 방이야! 혹시 초대 코드에 공백이 있는지 확인해줘.</string>
    <string name="joinroome_button">입장하기</string>

    <string name="waitingroom_cardview_title">참여자</string>
    <string name="waitingroom_copy_invitation_code">초대 코드 복사</string>
    <string name="waitingroom_notice_admin">방장 산타는 참여자가 다 모이면 마니또 매칭을 해줘!</string>
    <string name="waitingroom_notice_participant">방장 산타가 마니또 매칭을 할 때까지 기다려보자!</string>
    <string name="waitingroom_bottombutton">바로 매칭 시작하기</string>
    <string name="waitingroom_snackbar_invitation_code">참여 코드가 복사되었습니다</string>
    <string name="waitingroom_modify">수정하기</string>

    <string name="manittoroom_description_today_prefix">바로 오늘, </string>
    <string name="manittoroom_description_not_today_prefix">오늘부터 %d일 후인,</string>
    <string name="manittoroom_description_suffix" formatted="false">%d월 %d일\n%s %02d:%02d까지 진행되는 마니또</string>
    <string name="manittoroom_description_overtime" formatted="false">~%d.%d.%d\n앗! 아쉽게도 기한이 지나버렸어!</string>

    <string name="matching_text">산타 마니또 매칭중\n잠시만 기다려줘 :)</string>

    <string name="matched_bottom_button">마니또 하러 가기</string>
    <string name="matched_mission_title" formatted="false">%s 산타가 수행할 미션</string>
    <string name="matched_manitto_title" formatted="false">%s 산타의 마니또</string>
    <string name="matched_mission_manitto_title">마니또가 나에게 수행한 미션</string>
    <string name="matched_no_mission">이번에는 미션 없이 마니또만 매칭됐어!</string>
    <string name="matched_bottom_button_delete">나의 산타 마니또에서 삭제하기</string>

    <string name="finish_bottom_button">전체 결과 보기</string>
    <string name="finish_bottom_button_return">홈으로 가기</string>
    <string name="finish_manitto_title">%d일동안의 산타 마니또 종료!\n나의 산타 마니또는 누구일까?</string>
    <string name="finish_title">나를 챙겨준 산타 마니또</string>
    <string name="result_bottom">내 결과 보기</string>
    <string name="result_title">총 %d명</string>

    <string name="santanameinput_alert">・이름은 최대 %d자까지 설정 가능해</string>

    <string name="editname_background">산타 마니또가 나를\n뭐라고 부르는 게 좋을까?</string>
    <string name="editname_finish">이제 바꾼 이름으로 마니또 게임을 할 수 있어!</string>
    <string name="editname_button">이름 수정 완료</string>
    <string name="editname_title">이름 수정</string>

    <string name="exit_dialog_host">방장이 나가면 재입장할 수 없고\n친구들도 더 이상 방에 접속할 수 없어!</string>
    <string name="exit_dialog_host_confirm">방 나가기</string>
    <string name="exit_dialog_host_cancel">방에 머물기</string>
    <string name="exit_dialog_guest">%s\n이 방을 나가는 거 맞지?</string>
    <string name="exit_dialog_history">한 번 나가면 마니또 방에 다시\n들어올 수 없어. 그래도 괜찮아?</string>

    <string name="setting_1_edit_name">이름 수정</string>
    <string name="setting_2_inquiry">문의하기</string>
    <string name="setting_3_tos">서비스 이용약관</string>
    <string name="setting_4_privacy_policy">개인정보 처리방침</string>
    <string name="editname_withdraw"><u>회원 탈퇴</u></string>

    <string name="update_dialog_content">원활한 산타마니또를 위해\n업데이트를 해야해!</string>
    <string name="update_dialog_exit">마니또 종료</string>
    <string name="update_dialog_update">업데이트</string>

    <string name="mymanitto_removed">삭제된 방</string>
    <string name="mymanitto_removed_content">해당 방은 방장에 의해\n삭제된 방이야</string>
    <string name="mymanitto_remove">삭제하기</string>
    <string name="mymanitto_epired_content">매칭 기간이 지났어!</string>
    <string name="mymanitto_epired_dialog">매칭 기간이 지나버렸어\n우리 새로운 방을 만들어볼래?</string>
    <string name="mymanitto_epired_dialog_button">홈으로 가기</string>

    <string name="splash_network_error_dialog">네트워크 연결이 불안정한 상태야.\n연결 상태를 확인해줘.</string>
    <string name="splash_network_error_dialog_button">확인</string>
    <string name="withdraw_dialog_title">탈퇴하면 추억이 담긴 마니또 내역을\n다시 확인할 수 없어. 그래도 괜찮아?</string>
    <string name="withdraw_dialog_cancel">탈퇴하기</string>
    <string name="withdraw_dialog_confirm">머무르기</string>
    <string name="chat_overview_title">알림</string>

</resources>
