<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.sopt.santamanitto.room.join.JoinRoomViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <org.sopt.santamanitto.view.SantaBackground
            android:id="@+id/santabackground_joinroom"
            style="@style/SantaBackground.SubTask"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:backKey="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.396"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:middleTitle="@string/joinroom_background_description"
            app:santaTitle="@string/joinroom_background_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_joinroom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_entire"
            android:layout_marginTop="40dp"
            android:text="@string/joinroom_title"
            android:textFontWeight="600"
            android:textSize="@dimen/size_signin_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/santabackground_joinroom" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_joinroom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_entire"
            android:layout_marginTop="@dimen/margin_cardview_to_guidline_top"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_joinroom_title"
            app:moreRound="true"
            app:strokeColor="@color/light_gray"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:paddingVertical="24dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textview_joinroom_cardtitle"
                    style="@style/TitleOfCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/joinroom_card_title"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <org.sopt.santamanitto.view.SantaEditText
                    android:id="@+id/edittext_joinroom_invitationcode"
                    setText="@={viewModel.invitationCode}"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_santaedittext_big"
                    android:layout_marginTop="@dimen/margin_joinroom_edittext_top"
                    app:hint="@string/joinroom_participation_code_hint"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textview_joinroom_cardtitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_joinroom_alert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/cardview_joinroom"
            app:layout_constraintStart_toStartOf="@id/cardview_joinroom"
            app:layout_constraintTop_toBottomOf="@id/cardview_joinroom"
            tool:visibility="visible">

            <ImageView
                android:id="@+id/imageview_invitecode_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_alert"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_invitecode_alert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/red"
                android:textFontWeight="500"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="@id/imageview_invitecode_alert"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageview_invitecode_alert"
                app:layout_constraintTop_toTopOf="@id/imageview_invitecode_alert"
                tool:text="이미 참여중인 방이야!" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <org.sopt.santamanitto.view.SantaBottomButton
            android:id="@+id/santabottomButton_joinroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_entire"
            android:layout_marginBottom="@dimen/margin_bottombutton_bottom"
            android:enabled="@{!viewModel.isInvitationCodeEmpty()}"
            android:text="@string/joinroome_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>